# robot-dev-bench

./: .gitignore  Context.txt  PROJECT_PROGRESS.md  README.md  download_bing.py  patch.py  patch_app.py  patch_app_jobs.py  patch_calib.py  patch_ext_loader.py  patch_index.py  patch_script.py  patch_script_jobs.py  pyproject.toml  requirements.txt  run_ui.sh  test_api.py  test_g1_inference.py  test_upload.py  test_viewer.html  test_viewer.js
.agents/: AGENTS.md
scripts/: fetch_baselines.py  generate_charuco.py  generate_checkerboard.py  generate_mock_calibration.py  generate_test_parquet.py  mock_publisher.py  record_telemetry.py
src/: __init__.py
src/classification/: __init__.py  baselines.py  clustering.py  evaluator.py  rules.py
src/features/: __init__.py  biomechanics.py  extractor.py  metrics.py  stability.py
src/ingestion/: __init__.py  av_loader.py  data_models.py  dds_client.py  exporter.py  live_subscriber.py  log_validator.py  parser.py  schema_mapper.py
src/processing/: __init__.py  bps_calculator.py  calibration.py  filter.py  generate_synthetic_g1.py  jobs.py  lift_core.py  lifter.py  monocular_depth.py  pose_estimation.py  stereo_core.py  sync.py  synchronizer.py  triangulation.py
src/storage/: __init__.py  database.py
src/web/: app.py  bps_api.py
tests/: __init__.py  test_biomechanics.py  test_calibration.py  test_classification.py  test_features.py  test_ingestion.py  test_integration.py  test_log_integration.py  test_processing.py  test_schema_mapper.py  test_triangulation.py
web-ui/: index.html  script.js  style.css
(+13 files in other folders)
