[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "unitree-g1-bench"
version = "0.1.0"
description = "Benchmarking and classification pipeline for Unitree G1-Edu."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "h5py",
    "mcap",
    "pyarrow",
    "scikit-learn",
    "fastapi",
    "uvicorn",
    "python-multipart",
    "datasets",
    "huggingface-hub",
    "opencv-python"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "matplotlib",
    "seaborn",
    "jupyter"
]

[tool.setuptools.packages.find]
where = ["src"]
